{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "4382ccb8-3c86-4afc-bfe3-c2ddefe8c1d3",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "932fb516-416a-4717-a774-3dbb6265cdae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "631dac9a-9565-4cb9-8fda-a88a89e9a6b1",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}